# docu-gen

./: .gitignore  README.md  example.mcp.json  pyproject.toml
.claude/skills/narration-tone/: SKILL.md
assets/: robo.flac
docs/superpowers/plans/: 2026-04-05-docugen-mcp.md  2026-04-05-perilux-infographic-upgrade.md  2026-04-12-subclip-architecture.md  2026-04-13-pipeline-v2.md  2026-04-14-compositing-dag.md  2026-04-16-manim-data-viz-mvp.md
docs/superpowers/specs/: 2026-04-05-docugen-mcp-design.md  2026-04-12-animation-primitives-design.md  (+5 more)
example/: prompt.txt
projects/example/: config.yaml
scripts/: calibrate_chatterbox.py
src/docugen/: __init__.py  align.py  audio_fx.py  choreographer.py  compose.py  config.py  direct.py  drone.py  numberwords.py  server.py  split.py  spot.py  timing.py
tests/: test_compose.py  test_config.py  test_default_dag_llm_custom.py  test_direct.py  test_direct_prepare_v2.py  test_direct_v2.py  test_drone.py  test_narrate.py  test_narrate_v2.py  test_numberwords.py  test_plan.py  test_primitive_aliases.py  test_render.py  test_renderer_llm_custom.py  test_score.py  test_slides.py  test_split.py  test_spot.py  test_stitch.py  test_themes.py  test_timing.py  test_title.py  test_viz_extract.py
tests/primitives/: test_ambient_field.py  test_bar_chart.py  test_before_after.py  test_callout.py  test_chapter_card.py  test_counter.py  test_deprecated.py  test_line_chart.py  test_llm_custom.py  test_photo_organism.py  test_registry.py  test_schema.py  test_svg_reveal.py  test_timeline.py  test_title.py  test_tree.py
(+36 files in other folders)
